cmake_minimum_required(VERSION 3.16)

set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
   
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
    set(CFLAGS "-Wall -Werror")
ENDIF(CMAKE_SYSTEM_NAME MATCHES "Windows")


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CFLAGS}")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CFLAGS}")

add_subdirectory(hashtable)
